--- a/LEVEL 1/pretag.html
+++ b/LEVEL 1/pretag.html
@@ -4,14 +4,15 @@
         <title>
             pretag
         </title>
+
     </head>
     <body>
-        the dog        is barking
-        and the dog              is very sad 
-
-
-        <pre>I can't        live 
-             without you..    you are always my charm
+        <p>
+            This        is a dog and      
+            this       is     a      cat.         
+        </p>
+        <pre> I have        learned     the    html     
+            and css    courses    on    youtube..
         </pre>
     </body>
 </html>
