--- a/LEVEL 1/hyperlink.html
+++ b/LEVEL 1/hyperlink.html
@@ -6,8 +6,14 @@
         </title>
     </head>
     <body>
-        <a href="https://www.google.com/search?q=google&oq=google&gs_lcrp=EgZjaHJvbWUqBggAEEUYOzIGCAAQRRg7MgYIARBFGDsyBggCEEUYOzIHCAMQABiPAjIHCAQQABiPAjIGCAUQRRg8MgYIBhBFGEEyBggHEEUYPNIBCTU3ODlqMGoxNagCCLACAfEFJqJYaC8hGs8&sourceid=chrome&ie=UTF-8 ">Google</a> <br>
-        <a href="https://www.chatgpt.com">chatgpt</a> <br>
-        <a href="http://www.facebook.com">facebook</a>
+        <h1>KG Coding</h1>
+        <button id="click-me">Click me</button> <br>
+        <button>Push me</button>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ea obcaecati enim maxime neque, id sed voluptates quisquam tempore recusandae aspernatur cumque? Nisi facilis porro iure dolor expedita eius officiis.</p>
+
+
+
+        <a href="https://www.knowledgegate.in/" target="_blank">Go to KG Website</a>
     </body>
 </html>
